solves https://wepublish.atlassian.net/browse/HAS-46

--- a/assets/styles/print.scss
+++ b/assets/styles/print.scss
@@ -34,7 +34,9 @@
     padding-left: 15% !important;
     padding-right: 15% !important;
 
-    p {
+    p,
+      ul,
+      ol {
       hyphens: auto;
       font-size: 13px !important; // default is 18
     }
